TEST_PROGRAMS/VALID/narges_aghakazemjourabbaf/fibonacci.min
# Compute Fibonacci Sequence
var n: int;
var x: int;
var y: int;
var z: int;

print "Enter a positive integer";
read n;
x = 0;
y = 1;
z = 1;

while n do
  x = y;
  y = z;
  z = x + y;
  n = n - 1;
done

print x;


