TEST_PROGRAMS/INVALID/dongkyu_kim/incorrect3.min
# incorrect 3

var x: int;
var y: int;

x = 0;
y = 10;

var z: int;

z = x + y;

print z;

